# fiberly-agent-cu

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.agent  Dockerfile.agent-service  LICENSE  README.md  agent.yaml  azure.yaml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
content-understanding/: README.md
content-understanding/demo_files/: work_order_fiber_splice.docx  work_order_fiber_splice.json  work_order_for_prebuilt_layout.docx  work_order_scanned.json
content-understanding/tests/: conftest.py  test_basic_cu_mode.py  test_classifier.py  test_work_order_analyzer.py
content-understanding/tools/: create_classify_and_analyze.py  create_work_order_analyzer.py
docs/: architecture.md  deployment.md  local-development.md  session-overview.md  toolbox-integration.md
infra/: main.bicep  main.json  main.parameters.json
infra-agent/: README.md
infra/cu-only/: main.bicep  main.parameters.json
infra/modules/: ai-search.bicep  container-app.bicep  container-apps-environment.bicep  container-registry.bicep  log-analytics.bicep  storage-account.bicep
scripts/: gen_training_cert_pdf.py  gen_work_order_pdf.py  setup-knowledge-base.ps1  setup-knowledge-base.sh  setup.ps1  setup.sh  start-dev.ps1  start-dev.sh
services/foundry-iq-docs/: README.md
services/inventory-mcp/: Dockerfile  pyproject.toml  server.py
services/inventory-mcp/data/: inventory.json
services/status-dashboard/: Dockerfile  nginx.conf
tests/: test_agent_additive.py
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
(+55 files in other folders)
