[project]
name = "fibey-agent"
version = "0.1.0"
description = "Demo showcasing Azure AI Foundry Hosted Agents and the Foundry Toolbox"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "azure-identity>=1.17.0",
    "azure-ai-projects>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "agent-framework>=1.4.0",
    "agent-framework-foundry-hosting",
    "agent-framework-azure-contentunderstanding",
    "mcp>=1.24.0,<2",
    "httpx",
]

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
fibey-agent = { path = ".", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "python-docx>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fibey"]
