[project]
name = "inventory-mcp"
version = "0.1.0"
description = "Fiber optics parts inventory MCP server"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.24.0",
    "uvicorn>=0.30.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py", "data/inventory.json"]

[tool.hatch.build.targets.sdist]
include = ["server.py", "data/inventory.json", "Dockerfile"]
